# DummyCompiler

./: CMakeLists.txt
include/: AST.h  CompilerContext.h  ILexer.h  IRCodeGenContext.h  IVisitor.h  LangTokenHolder.h  LangTokenSet.h  LogImpl.h  StreamLexer.h  StructTypeWrapper.h  VisitorIRCodeGen.h  VisitorPrint.h
src/: BisonParser.yy  CompilerContext.cpp  FlexLexer.ll  IRCodeGenContext.cpp  LangTokenHolder.cpp  StreamLexer.cpp  VisitorIRCodeGen.cpp  main.cpp
